deployment/redis-to-elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-to-elasticsearch
  name: redis-to-elasticsearch
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis-to-elasticsearch
    spec:
      containers:
      - env:
        - name: ACCESS_TOKEN_KEY
          valueFrom:
            configMapKeyRef:
              key: ACCESS_TOKEN_KEY
              name: redis-to-elasticsearch-stream-env-list
        - name: ACCESS_TOKEN_SECRET
          valueFrom:
            configMapKeyRef:
              key: ACCESS_TOKEN_SECRET
              name: redis-to-elasticsearch-stream-env-list
        - name: CONSUMER_KEY
          valueFrom:
            configMapKeyRef:
              key: CONSUMER_KEY
              name: redis-to-elasticsearch-stream-env-list
        - name: CONSUMER_SECRET
          valueFrom:
            configMapKeyRef:
              key: CONSUMER_SECRET
              name: redis-to-elasticsearch-stream-env-list
        - name: ES_INDEX
          valueFrom:
            configMapKeyRef:
              key: ES_INDEX
              name: redis-to-elasticsearch-stream-env-list
        - name: ES_MAX_SIZE
          valueFrom:
            configMapKeyRef:
              key: ES_MAX_SIZE
              name: redis-to-elasticsearch-stream-env-list
        - name: ES_URI
          valueFrom:
            configMapKeyRef:
              key: ES_URI
              name: redis-to-elasticsearch-stream-env-list
        image: cpgeier/redis_to_elasticsearchy2
        imagePullPolicy: Always
        name: redis-to-elasticsearch
        resources: {}
      restartPolicy: Always
status: {}
