deployment/twitter-to-redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: twitter-to-redis
  name: twitter-to-redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: twitter-to-redis
    spec:
      containers:
      - env:
        - name: ACCESS_TOKEN_KEY
          valueFrom:
            configMapKeyRef:
              key: ACCESS_TOKEN_KEY
              name: twitter-to-redis-stream-env-list
        - name: ACCESS_TOKEN_SECRET
          valueFrom:
            configMapKeyRef:
              key: ACCESS_TOKEN_SECRET
              name: twitter-to-redis-stream-env-list
        - name: CONSUMER_KEY
          valueFrom:
            configMapKeyRef:
              key: CONSUMER_KEY
              name: twitter-to-redis-stream-env-list
        - name: CONSUMER_SECRET
          valueFrom:
            configMapKeyRef:
              key: CONSUMER_SECRET
              name: twitter-to-redis-stream-env-list
        - name: ES_INDEX
          valueFrom:
            configMapKeyRef:
              key: ES_INDEX
              name: twitter-to-redis-stream-env-list
        - name: ES_MAX_SIZE
          valueFrom:
            configMapKeyRef:
              key: ES_MAX_SIZE
              name: twitter-to-redis-stream-env-list
        - name: ES_URI
          valueFrom:
            configMapKeyRef:
              key: ES_URI
              name: twitter-to-redis-stream-env-list
        image: cpgeier/twitter_to_redisy2
        imagePullPolicy: Always
        name: twitter-to-redis
        resources: {}
      restartPolicy: Always
status: {}
