deployment/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"express-port":"HTTPS"}'
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  type: NodePort
  selector:
    io.kompose.service: api
  ports:
  - name: express-port
    port: 3000
    targetPort: 3000
