deployment/real-time-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: real-time-ml
  labels:
    app: hello
spec:
  backend:
    serviceName: api
    servicePort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: helloweb-backend
#   labels:
#     app: hello
# spec:
#   type: NodePort
#   selector:
#     io.kompose.service: api
#   ports:
#   - port: 3000
#     targetPort: 3000
